--- a/my_google.html
+++ b/my_google.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <h1><span style="color: aquamarine;">G</span>oogle</h1>
+     <span style="color:blue;">G</span><span style="color:red;">o</span><span style="color:yellow;">o</span><span style="color:blue;">g</span><span style="color:green;">l</span><span style="color:red;">e</span>
     <form action="https://www.google.com/search" target="_blank">
         <div>
             <span class="icon-search">🔍</span>
